# zangetsu

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  env.example  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
code_council/: __init__.py  advisors.py  cli.py  config.py  context.py  daemon.py  framer.py  llm.py  state.py  storage.py  synthesizer.py  transcript.py  utils.py
code_council/skills/: architect.md  business.md  decision_gate.md  executor.md  framer.md  fraud.md  humaniser.md  quality.md  risk.md  security.md  synthesizer.md  synthesizer_analysis.md
docs/: ARCHITECTURE.md  code-council-plan.md
tests/: conftest.py  test_config.py  test_context_approval.py  test_context_gather.py  test_context_scanning.py  test_export_markdown.py  test_framer.py  test_llm.py  test_load_context.py  test_review_init.py  test_skill_model_routing.py  test_skill_registry.py  test_state_negotiation.py  test_state_status.py  test_state_transitions.py  test_storage.py  test_synthesizer.py  test_transcript.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  types.ts
web/src/components/: AdvisorCard.tsx  AdvisorsPanel.tsx  CouncilReviewPanel.tsx  DescriptionInput.tsx  ErrorDisplay.tsx  FramerWizard.tsx  MarkdownContent.tsx  PipelineTracker.tsx  PlanHistory.tsx  PlanSidebar.tsx  PlanView.tsx  ProjectScanner.tsx  RequirementReview.tsx  TokenUsageSidebar.tsx
web/src/hooks/: useCouncilFeedback.ts  useCouncilStream.ts  useFramer.ts  (+2 more)
